adding a test biography paragraph to the HTML

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="panel-heading">About Weird Al
 						<div class="panel-body">
 							<p>
-								Weird Al is a musician and comedic performer. INSERT_BIOGRAPHY_HERE
+								Weird Al is a musician and comedic performer. Alfred Matthew Yankovic was born October 23, 1959, in Lynwood, California. An only child, he began playing the accordion at age seven, following in the tradition of polka star Frank Yankovic (no relation). In his early teens he became an avid fan of the Dr. Demento show, drawing inspiration from the parodies of Allan Sherman as well as the musical comedy of Spike Jones, Tom Lehrer, and Stan Freberg. In 1973, Demento spoke at Yankovic's school, where the 13-year-old passed the radio host a demo tape of home recordings; three years later, Demento played Yankovic's "Belvedere Cruising" -- an accordion-driven pop song written about the family's Plymouth -- on the air, and his career was launched.
 							</p>
 							<p>
 								Read more at: <a href="https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic">https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic</a>
