Final file. Updated biography, added video for Hot Ones, added video for MLP, fixed indentation.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     A video of the band or musician playing
         DONE
     Proper indentation
-
+        DONE
 -->
 <html>
     <head>
@@ -56,8 +56,12 @@
 					<div class="panel-heading">About Weird Al
 						<div class="panel-body">
 							<p>
-								Weird Al is a musician and comedic performer. Alfred Matthew Yankovic was born October 23, 1959, in Lynwood, California. An only child, he began playing the accordion at age seven, following in the tradition of polka star Frank Yankovic (no relation). In his early teens he became an avid fan of the Dr. Demento show, drawing inspiration from the parodies of Allan Sherman as well as the musical comedy of Spike Jones, Tom Lehrer, and Stan Freberg. In 1973, Demento spoke at Yankovic's school, where the 13-year-old passed the radio host a demo tape of home recordings; three years later, Demento played Yankovic's "Belvedere Cruising" -- an accordion-driven pop song written about the family's Plymouth -- on the air, and his career was launched.
-							</p>
+                                Weird Al is a musician and comedic performer. Alfred Matthew Yankovic was born October 23, 1959, in Lynwood, California. An only child, he began playing the accordion at age seven, following in the tradition of polka star Frank Yankovic (no relation). In his early teens he became an avid fan of the Dr. Demento show, drawing inspiration from the parodies of Allan Sherman as well as the musical comedy of Spike Jones, Tom Lehrer, and Stan Freberg. In 1973, Demento spoke at Yankovic's school, where the 13-year-old passed the radio host a demo tape of home recordings; three years later, Demento played Yankovic's "Belvedere Cruising" -- an accordion-driven pop song written about the family's Plymouth -- on the air, and his career was launched.
+                            </p>
+                            <p>
+                                
+                                Since his first-aired comedy song in 1976, he has sold more than 12 million albums (as of 2007),[3] recorded more than 150 parody and original songs,[4][5][6] and performed more than 1,000 live shows.[7] His works have earned him five Grammy Awards and a further eleven nominations, four gold records, and six platinum records in the United States. Yankovic's first top ten Billboard album (Straight Outta Lynwood) and single ("White & Nerdy") were both released in 2006, nearly three decades into his career. His latest album, Mandatory Fun (2014), became his first number-one album during its debut week.
+                            </p>
 							<p>
 								Read more at: <a href="https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic">https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic</a>
 							</p>
@@ -68,7 +72,7 @@
                 <div class="panel panel-primary">
                         <div class="panel-heading">
                             <div class="panel-body">
-                                <p> <!--Theoretically, this should work. But 
+                                <p> <!--5/1/19: Theoretically, this should work. But 
                                         clicking on the video simply brings up a 
                                         "This video is unavailable" error. As 
                                         best as I can figure out, this is due to 
@@ -81,7 +85,17 @@
 
                                         <!--R.I.P. Angelfire and Geocities :( -->
 
+                                        <!--5/3/19: Got some help from a friend in figuring out how to push this to a live Github address. IT'S ALIIIIVE!!!-->
+
                                         <iframe width="560" height="315" src="https://www.youtube.com/embed/8Gv0H-vPoDc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </p>
+                                <p>
+                                    Weird Al is also known for working outside of direct music productions themselves, appearing on novelty YouTube series such as "Hot Ones", where celebrities eat increasingly spicy chicken wings while conducting an interview:
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XTvORn_2B7I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </p>
+                                <p>
+                                    He's even appeared on children's television, such as a guest star appearance in the show <i>My Little Pony: Friendship is Magic:</i>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yszcyFIdPYE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </p>
                             </div>
                         </div>
@@ -103,19 +117,10 @@
                                         <li><a href="https://www.youtube.com/watch?v=qpMvS1Q1sos">It's All About the Pentiums (Album: Running with Scissors)</a></li>
                                     </ul>
                                 </div>
-                                </div>
                             </div>
+                        </div>
                 
     </div>
-
-
-
-
-
-
-
-
-
 
 </body>
 
