adding Bonus, opening links in new tabs, also trying to add favicon

--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
         DONE
     Proper indentation
         DONE
+    ==BONUS==
+    Make your link(s) open in a new tab.
+        DONE
+    Add a favicon to your site (the little icon that appears on the browser tab).
+
+    Make a table.
+
 -->
 <html>
     <head>
+        <link rel="shortcut icon" type="image/png" href="/weirdal.png"/>
+        <link rel="shortcut icon" type="image/png" href="http://xisifer.github.io/weirdal.png"/>
         <meta charset="UTF-8">
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
@@ -63,7 +72,7 @@
                                 Since his first-aired comedy song in 1976, he has sold more than 12 million albums (as of 2007),[3] recorded more than 150 parody and original songs,[4][5][6] and performed more than 1,000 live shows.[7] His works have earned him five Grammy Awards and a further eleven nominations, four gold records, and six platinum records in the United States. Yankovic's first top ten Billboard album (Straight Outta Lynwood) and single ("White & Nerdy") were both released in 2006, nearly three decades into his career. His latest album, Mandatory Fun (2014), became his first number-one album during its debut week.
                             </p>
 							<p>
-								Read more at: <a href="https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic">https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic</a>
+								Read more at: <a href="https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic" target="_blank">https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic</a>
 							</p>
 						</div>
 					</div>
@@ -108,15 +117,15 @@
                                 <div class="panel-heading">List a few of my Favorite Songs</div>
                                 <div class="panel-body">
                                     <ul>
-                                        <li><a href="https://www.youtube.com/watch?v=8Gv0H-vPoDc">Word Crimes (Album: Mandatory Fun)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=urglg3WimHA">Foil (Album: Mandatory Fun)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=YKtlK7sn0JQ">Ebay (Album: Poodle Hat)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=N9qYF9DZPdw">White & Nerdy (Album: Straight Outta Lynwood)</li>
-                                        <li><a href="https://www.youtube.com/watch?v=oe5gaCxWOkg">Albuquerque (Album: Running with Scissors)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=Tb-Mce9VpmY">The Night Santa Went Crazy (Album: Bad Hair Day)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=gwHYenKngQs">Phony Calls (Album: Bad Hair Day)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=C0g_LYOFJ1I">The Alternative Polka (Album: Bad Hair Day)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=qpMvS1Q1sos">It's All About the Pentiums (Album: Running with Scissors)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=8Gv0H-vPoDc" target="_blank">Word Crimes (Album: Mandatory Fun)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=urglg3WimHA" target="_blank">Foil (Album: Mandatory Fun)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=YKtlK7sn0JQ" target="_blank">Ebay (Album: Poodle Hat)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=N9qYF9DZPdw" target="_blank">White & Nerdy (Album: Straight Outta Lynwood)</li>
+                                        <li><a href="https://www.youtube.com/watch?v=oe5gaCxWOkg" target="_blank">Albuquerque (Album: Running with Scissors)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=Tb-Mce9VpmY" target="_blank">The Night Santa Went Crazy (Album: Bad Hair Day)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=gwHYenKngQs" target="_blank">Phony Calls (Album: Bad Hair Day)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=C0g_LYOFJ1I" target="_blank">The Alternative Polka (Album: Bad Hair Day)</a></li>
+                                        <li><a href="https://www.youtube.com/watch?v=qpMvS1Q1sos" target="_blank">It's All About the Pentiums (Album: Running with Scissors)</a></li>
                                     </ul>
                                 </div>
                             </div>
