Fixed broken favicon code, and finalized table.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     Add a favicon to your site (the little icon that appears on the browser tab).
 
     Make a table.
-
+        DONE
 -->
 <html>
     <head>
-        <link rel="shortcut icon" type="image/png" href="/weirdal.png"/>
-        <link rel="shortcut icon" type="image/png" href="http://xisifer.github.io/weirdal.png"/>
+        <link rel="icon" type="image/png" href="weirdal.png"/>
+        <link rel="icon" type="image/png" href="http://xisifer.github.io/weirdal.png"/>
         <meta charset="UTF-8">
         <meta name="google" content="notranslate">
         <meta http-equiv="Content-Language" content="en">
@@ -120,7 +120,7 @@
                                         <li><a href="https://www.youtube.com/watch?v=8Gv0H-vPoDc" target="_blank">Word Crimes (Album: Mandatory Fun)</a></li>
                                         <li><a href="https://www.youtube.com/watch?v=urglg3WimHA" target="_blank">Foil (Album: Mandatory Fun)</a></li>
                                         <li><a href="https://www.youtube.com/watch?v=YKtlK7sn0JQ" target="_blank">Ebay (Album: Poodle Hat)</a></li>
-                                        <li><a href="https://www.youtube.com/watch?v=N9qYF9DZPdw" target="_blank">White & Nerdy (Album: Straight Outta Lynwood)</li>
+                                        <li><a href="https://www.youtube.com/watch?v=N9qYF9DZPdw" target="_blank">White & Nerdy (Album: Straight Outta Lynwood)</a></li>
                                         <li><a href="https://www.youtube.com/watch?v=oe5gaCxWOkg" target="_blank">Albuquerque (Album: Running with Scissors)</a></li>
                                         <li><a href="https://www.youtube.com/watch?v=Tb-Mce9VpmY" target="_blank">The Night Santa Went Crazy (Album: Bad Hair Day)</a></li>
                                         <li><a href="https://www.youtube.com/watch?v=gwHYenKngQs" target="_blank">Phony Calls (Album: Bad Hair Day)</a></li>
@@ -130,8 +130,91 @@
                                 </div>
                             </div>
                         </div>
-                
+                        <p>
+                            Or, viewed another way:
+                        </p>
+                        <table>
+                            <tr>
+                                <th>Song (and YouTube link)</th>
+                                <th>Album</th>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="https://www.youtube.com/watch?v=8Gv0H-vPoDc" target="_blank">Word Crimes</a>
+                                </td>
+                                <td>
+                                    Mantatory Fun
+                                </td>
+                            </tr>   
+                            <tr>
+                                    <td>
+                                         <a href="https://www.youtube.com/watch?v=urglg3WimHA" target="_blank">Foil</a>
+                                    </td>
+                                    <td>
+                                        Mantatory Fun
+                                    </td>
+                            </tr>   
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=YKtlK7sn0JQ" target="_blank">Ebay</a>
+                                    </td>
+                                    <td>
+                                        Poodle Hat
+                                    </td>
+                            </tr>   
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=N9qYF9DZPdw" target="_blank">White & Nerdy</a>
+                                    </td>
+                                    <td>
+                                        Straight Outta Lynwood
+                                    </td>
+                            </tr> 
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=oe5gaCxWOkg" target="_blank">Albuquerque</a>
+                                    </td>
+                                    <td>
+                                        Running With Scissors
+                                    </td>
+                            </tr> 
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=Tb-Mce9VpmY" target="_blank">The Night Santa Went Crazy</a>
+                                    </td>
+                                    <td>
+                                        Bad Hair Day
+                                    </td>
+                            </tr> 
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=gwHYenKngQs" target="_blank">Phony Calls</a>
+                                    </td>
+                                    <td>
+                                        Bad Hair Day
+                                    </td>
+                            </tr> 
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=C0g_LYOFJ1I" target="_blank">The Alternative Polka</a>
+                                    </td>
+                                    <td>
+                                        Bad Hair Day
+                                    </td>
+                            </tr> 
+                            <tr>
+                                    <td>
+                                            <a href="https://www.youtube.com/watch?v=qpMvS1Q1sos" target="_blank">It's All About the Pentiums</a>
+                                    </td>
+                                    <td>
+                                        Running With Scissors
+                                    </td>
+                            </tr>                                                                                                                                             
+                        </table>
+
+        </div>
     </div>
+</div>
 
 </body>
 
