--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     	<div class="jumbotron bg-primary text-center">
                 <h1>Weird Al fan page!</h1>
         </div>
-
+        <a href="index2.html">Link to Class Exercise</a>
         <p>Weird Al is the Weirdest of all Al's!</p>
 
     <img src="https://www.sanluisobispo.com/entertainment/music-news-reviews/8ja47j/picture226124845/alternates/FREE_1140/AP19041782439176.jpg" alt="This is clearly the face of a man who takes himself seriously." width=620 height=480>
