Pushing up a few minor color edits.

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@ col-lg -->
                             <img src="assets/images/psychic.jpg" class="img-fluid" alt="Responsive image">
                             </a>
                             <div class="text-block" id="text1">
-                                Psychic Guessing Game
+                                "Psychic" Guessing Game
                             </div>
                         </div>
                     </div>
