Forcing an update to the Contact page

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                         <div class="row">
                             <div class="col-12">
                             <div id="aboutme"> 
-                                Contact Me
+                                Contact Me About Stuff
                     
                             </div>
                         </div>
