--- a/sidebar.html
+++ b/sidebar.html
@@ -172,6 +172,24 @@
                 </div>
                 <!-- ========================= -->
 
+                <div class="col-xs-6 col-sm-8 col-md-5 col-lg-4">
+                    <div class="text-image">
+                        <img src="assets/images/liri.jpg" class="img-fluid projectPic" alt="Responsive image">
+                        <div class="buttonArea">
+                            <p class="projectName">
+                                LIRI 
+                                <br>
+                                (Language Interpretation and Recognition Interface)
+                            </p>
+                            <br>
+                            <a href="https://github.com/Xisifer/LIRI" class="btn btn-secondary btn-lg" role="button">
+                                GitHub Repository
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <!-- ========================= -->
+
 
 
 
