--- a/sidebar.html
+++ b/sidebar.html
@@ -189,8 +189,24 @@
                     </div> 
                 </div>
                 <!-- ========================= -->
-
-
+                <div class="col-xs-6 col-sm-8 col-md-5 col-lg-4">
+                    <div class="text-image">
+                        <img src="assets/images/bamazon.jpg" class="img-fluid projectPic" alt="Responsive image">
+                        <div class="buttonArea">
+                            <p class="projectName">
+                                Bamazon 
+                                <br>
+                                MySQL and Node.js shopping program
+                            </p>
+                            <br>
+                            <a href="https://github.com/Xisifer/Week12HW-Bamazon" class="btn btn-secondary btn-lg" role="button">
+                                GitHub Repository
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <!-- ========================= -->
+               
 
 
                 </div>
