Updated Portfolio with Week 13 Friend Finder HW

--- a/sidebar.html
+++ b/sidebar.html
@@ -196,7 +196,7 @@
                             <p class="projectName">
                                 Bamazon 
                                 <br>
-                                MySQL and Node.js shopping program
+                                <!-- MySQL and Node.js shopping program -->
                             </p>
                             <br>
                             <a href="https://github.com/Xisifer/Week12HW-Bamazon" class="btn btn-secondary btn-lg" role="button">
@@ -206,7 +206,26 @@
                     </div> 
                 </div>
                 <!-- ========================= -->
-               
+                <div class="col-xs-6 col-sm-8 col-md-5 col-lg-4">
+                    <div class="text-image">
+                        <img src="https://cdn6.aptoide.com/imgs/4/0/0/400d2b0d4e9e5fb0f2ec27ff04bcd7bf_icon.png?w=256" class="img-fluid projectPic" alt="Responsive image">
+                        <div class="buttonArea">
+                            <p class="projectName">
+                               Star Wars Friend Finder 
+                                <br>
+                                <!-- Full-stack character matching app -->
+                            </p>
+                            <a href="https://friend-finder64.herokuapp.com/" class="btn btn-secondary btn-lg" role="button">
+                                Heroku Link
+                            </a>
+                            <br>
+                            <a href="https://github.com/Xisifer/Week13HW-FriendFinder" class="btn btn-secondary btn-lg" role="button">
+                                GitHub Repository
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <!-- ========================= -->
 
 
                 </div>
