Added Street Fighter CharClicker homework link

--- a/sidebar.html
+++ b/sidebar.html
@@ -226,6 +226,26 @@
                     </div> 
                 </div>
                 <!-- ========================= -->
+                <div class="col-xs-6 col-sm-8 col-md-5 col-lg-4">
+                    <div class="text-image">
+                        <img src="https://static-s.aa-cdn.net/img/ios/1239299402/13a58bb6594806c64fd2cd2151fed705" class="img-fluid projectPic" alt="Responsive image">
+                        <div class="buttonArea">
+                            <p class="projectName">
+                               Street Fighter Memory Game
+                                <br>
+                                <!-- React App memory test -->
+                            </p>
+                            <a href="http://charclicker.herokuapp.com" class="btn btn-secondary btn-lg" role="button">
+                                Heroku Link
+                            </a>
+                            <br>
+                            <a href="https://github.com/Xisifer/Week14HW-ClickyGame" class="btn btn-secondary btn-lg" role="button">
+                                GitHub Repository
+                            </a>
+                        </div>
+                    </div> 
+                </div>
+                <!-- ========================= -->
 
 
                 </div>
